msm: thermal: simple: Introduce simple MSM thermal solution [msm-4.14]
When properly configured, this driver monitors temperatures from a
specified sensor and reduces the CPU's max frequency in response to
the temperature crossing specified thermal zones. The temperature sensor
use must be a specified ADC channel on a given VADC device, hence this
driver's dependency on the chipset being an MSM product.

This driver can only be configured via the device tree; it cannot be
configured at runtime. Configuration instructions can be found in the
accompanying documentation.

[yaro]: Ported to 4.14.
Co-authored-by: Yaroslav Furman <yaro330@gmail.com>
Signed-off-by: Sultan Alsawaf <sultan@kerneltoast.com>

--- a/arch/arm64/configs/hardrock_defconfig
+++ b/arch/arm64/configs/hardrock_defconfig
@@ -6088,3 +6088,6 @@ CONFIG_ARM_AMBA=y
 CONFIG_HID_STEAM=y
 CONFIG_DYNAMIC_STUNE_BOOST=y
 
+CONFIG_LITTLE_CPU_MASK=15
+CONFIG_BIG_CPU_MASK=112
+CONFIG_PRIME_CPU_MASK=128
