--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1098,12 +1098,11 @@ config DYNAMIC_STUNE_BOOST
 	  activate and reset SchedTune boosting from anywhere in the kernel.
 
 config CPUSETS_ASSIST
-	bool "Cpusets configuration helper"
+	bool "Cpuset configuration helper"
 	depends on CPUSETS
 	depends on ANDROID
 	help
-	  This option enables the configuration of default cpusets
-	  parameters from kernel.
+	  This option enables in-kernel overrides for cpuset values.
 
 	  If unsure, say N.
 
