--- a/kernel/sched/Makefile
+++ b/kernel/sched/Makefile
@@ -33,3 +33,5 @@ obj-$(CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL) += cpufreq_blu_schedutil.o
 obj-$(CONFIG_MEMBARRIER) += membarrier.o
 obj-$(CONFIG_SCHED_CORE_CTL) += core_ctl.o
 obj-$(CONFIG_PSI) += psi.o
+
+CFLAGS_debug.o += -DCONFIG_DEBUG_FS
