Phoenix: Enabled steam valve Controller

--- a/arch/arm64/configs/hardrock_defconfig
+++ b/arch/arm64/configs/hardrock_defconfig
@@ -6083,3 +6083,4 @@ CONFIG_HWCONF_MANAGER=y
 CONFIG_SUSPEND_SKIP_SYNC=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ARM_AMBA=y
+CONFIG_HID_STEAM=y
