--- a/AnyKernel3/ramdisk/overlay.d/init.optimus.rc
+++ b/AnyKernel3/ramdisk/overlay.d/init.optimus.rc
@@ -1,18 +1,9 @@
-on boot
-# Set LMKD props
-    setprop ro.config.low_ram false
-    setprop ro.lmk.low 1001
-    setprop ro.lmk.medium 0
-    setprop ro.lmk.critical 0
-    setprop ro.lmk.critical_upgrade false
-    setprop ro.lmk.upgrade_pressure 100
-    setprop ro.lmk.downgrade_pressure 100
-    setprop ro.lmk.kill_heaviest_task true
-    setprop ro.lmk.kill_timeout_ms 100
-    setprop ro.lmk.use_minfree_levels true
-    setprop ro.lmk.log_stats true
-  
-on property:sys.boot_completed=1  
+on property:sys.boot_completed=1
+# Set CPU Frequencies    
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1804800
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 576000
+    write /sys/devices/system/cpu/cpu6/cpufreq/scaling_max_freq 2208000
+    write /sys/devices/system/cpu/cpu6/cpufreq/scaling_min_freq 806400
 # Enable ZRAM on boot_complete
     rm /data/unencrypted/zram_swap
     swapon_all /vendor/etc/fstab.qcom
