Phoenix: Underclocking and adjusting cpu costs

--- a/arch/arm64/boot/dts/qcom/sm6150.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm6150.dtsi
@@ -1,4 +1,5 @@
  /* Copyright (c) 2018-2019, The Linux Foundation.All rights reserved.
+  * Copyright (C) 2020 XiaoMi, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -390,17 +391,17 @@
 
 		CPU_COST_0: core-cost0 {
 			busy-cost-data = <
-				300000	24
-				576000	25
-				748800	31
-				1017600	54
-				1209600	78
-				1363200	105
-				1516800	116
-				1593600	139
-				1708800	168
+				100000	22				
+				376000	25				
+				568000	31				
+				817000	54				
+				1048000	78				
+				1363200	105					
+				1516800	116					
+				1593600	139					
+				1708800	168					
 				1804800	178
-			>;
+                        >;
 			idle-cost-data = <
 				16 12 8 6
 			>;
@@ -408,18 +409,18 @@
 
 		CPU_COST_1: core-cost1 {
 			busy-cost-data = <
-				300000	180
-				652800	236
-				768000	273
-				979200	446
-				1017600	462
-				1209600	662
-				1363200	894
-				1516800	989
-				1708800	1276
-				1900800	1652
-				2016000	2040
-				2112000	2242
+				100000	100					
+				452800	236					
+				606000	273					
+				779000	446					
+				894000	462					
+				1009000	662					
+				1363200	894					
+				1516800	989					
+				1708800	1276					
+				1900800	1652					
+				2016000	2040					
+				2112000	2242					
 				2208000	2713
 			>;
 			idle-cost-data = <
@@ -429,15 +430,15 @@
 
 		CLUSTER_COST_0: cluster-cost0 {
 			busy-cost-data = <
-				300000	8
-				576000	8
-				748800	9
-				1017600	12
-				1209600	15
-				1363200	18
-				1516800	21
-				1593600	22
-				1708800	23
+				100000	6					
+				376000	8					
+				568000	9					
+				817000	12					
+				1048000	15					
+				1363200	18					
+				1516800	21					
+				1593600	22					
+				1708800	23					
 				1804800	24
 			>;
 			idle-cost-data = <
@@ -447,18 +448,18 @@
 
 		CLUSTER_COST_1: cluster-cost1 {
 			busy-cost-data = <
-				300000	28
-				652800	35
-				768000	36
-				979200	48
-				1017600	59
-				1209600	73
-				1363200	86
-				1516800	88
-				1708800	96
-				1900800	103
-				2016000	107
-				2112000	112
+                        	100000	25				        
+				452800	35	                                
+				606000	36	                               
+				779000	48	                               
+				894000	59	                              
+				1009000	73	                                
+				1363200	86	                               
+				1516800	88	                               
+				1708800	96	                                
+				1900800	103	                               
+				2016000	107	                                   
+				2112000	112	                               
 				2208000	120
 			>;
 			idle-cost-data = <
@@ -492,7 +493,7 @@
 					dev = "/dev/block/platform/soc/1d84000.ufshc/by-name/vendor";
 					type = "ext4";
 					mnt_flags = "ro,barrier=1,discard";
-					fsmgr_flags = "wait,slotselect,avb";
+					fsmgr_flags = "wait,slotselect";
 					status = "ok";
 				};
 			};
@@ -1696,7 +1697,7 @@
 
 		/* PM QoS */
 		qcom,pm-qos-cpu-groups = <0x3f 0xC0>;
-		qcom,pm-qos-cpu-group-latency-us = <67 67>;
+		qcom,pm-qos-cpu-group-latency-us = <100 100>;
 		qcom,pm-qos-default-cpu = <0>;
 
 		pinctrl-names = "dev-reset-assert", "dev-reset-deassert";
@@ -2425,7 +2426,6 @@
 		qcom,smem-id = <421>;
 		qcom,signal-aop;
 		qcom,minidump-id = <3>;
-		qcom,aux-minidump-ids = <4>;
 		qcom,complete-ramdump;
 
 		/* Inputs from mss */
