--- a/arch/arm64/configs/hardrock_defconfig
+++ b/arch/arm64/configs/hardrock_defconfig
@@ -6085,3 +6085,6 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ARM_AMBA=y
 CONFIG_HID_STEAM=y
 CONFIG_DYNAMIC_FSYNC=y
+CONFIG_ANDROID_SIMPLE_LMK=y
+CONFIG_ANDROID_SIMPLE_LMK_MINFREE=100
+CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=200
