--- a/arch/arm64/configs/hardrock_defconfig
+++ b/arch/arm64/configs/hardrock_defconfig
@@ -6086,5 +6086,5 @@ CONFIG_SUSPEND_SKIP_SYNC=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ARM_AMBA=y
 CONFIG_HID_STEAM=y
-
+CONFIG_DYNAMIC_STUNE_BOOST=y
 
