--- a/arch/arm64/configs/hardrock_defconfig
+++ b/arch/arm64/configs/hardrock_defconfig
@@ -6087,7 +6087,7 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ARM_AMBA=y
 CONFIG_HID_STEAM=y
 CONFIG_DYNAMIC_STUNE_BOOST=y
-
+CONFIG_MSM_THERMAL_SIMPLE=y
 CONFIG_LITTLE_CPU_MASK=15
 CONFIG_BIG_CPU_MASK=112
 CONFIG_PRIME_CPU_MASK=128
