--- a/arch/arm64/configs/hardrock_defconfig
+++ b/arch/arm64/configs/hardrock_defconfig
@@ -348,7 +348,7 @@ CONFIG_BLK_DEV_BSG=y
 # CONFIG_BLK_DEV_THROTTLING is not set
 # CONFIG_BLK_CMDLINE_PARSER is not set
 # CONFIG_BLK_WBT is not set
-CONFIG_BLK_DEBUG_FS=y
+# CONFIG_BLK_DEBUG_FS is not set
 # CONFIG_BLK_SED_OPAL is not set
 
 #
@@ -1257,7 +1257,7 @@ CONFIG_BT_HS=y
 CONFIG_BT_LE=y
 # CONFIG_BT_LEDS is not set
 # CONFIG_BT_SELFTEST is not set
-CONFIG_BT_DEBUGFS=y
+# CONFIG_BT_DEBUGFS is not set
 
 #
 # Bluetooth device drivers
@@ -1354,7 +1354,7 @@ CONFIG_REGMAP_SPMI=y
 CONFIG_REGMAP_MMIO=y
 CONFIG_REGMAP_IRQ=y
 CONFIG_REGMAP_WCD_IRQ=y
-CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS=y
+# CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS is not set
 CONFIG_DMA_SHARED_BUFFER=y
 # CONFIG_DMA_FENCE_TRACE is not set
 CONFIG_DMA_CMA=y
@@ -3520,7 +3520,7 @@ CONFIG_DUMMY_CONSOLE=y
 CONFIG_DUMMY_CONSOLE_COLUMNS=80
 CONFIG_DUMMY_CONSOLE_ROWS=25
 # CONFIG_FRAMEBUFFER_CONSOLE is not set
-CONFIG_LOGO=y
+# CONFIG_LOGO is not set
 # CONFIG_LOGO_LINUX_MONO is not set
 # CONFIG_LOGO_LINUX_VGA16 is not set
 CONFIG_LOGO_LINUX_CLUT224=y
@@ -4845,7 +4845,7 @@ CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_MSM_HAB is not set
 # CONFIG_MSM_AGL is not set
 CONFIG_MSM_PERFORMANCE=y
-CONFIG_QMP_DEBUGFS_CLIENT=y
+# CONFIG_QMP_DEBUGFS_CLIENT is not set
 CONFIG_QCOM_QHEE_ENABLE_MEM_PROTECTION=y
 CONFIG_QCOM_SMP2P_SLEEPSTATE=y
 CONFIG_QCOM_CDSP_RM=y
