--- a/arch/arm64/configs/hardrock_defconfig
+++ b/arch/arm64/configs/hardrock_defconfig
@@ -696,7 +696,7 @@ CONFIG_PM=y
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 CONFIG_PM_GENERIC_DOMAINS=y
-CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
 CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
 CONFIG_PM_GENERIC_DOMAINS_OF=y
 CONFIG_CPU_PM=y
@@ -6083,7 +6083,6 @@ CONFIG_HWCONF_MANAGER=y
 # CONFIG_FACTORY_BUILD is not set
 # features
 CONFIG_SUSPEND_SKIP_SYNC=y
-CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ARM_AMBA=y
 CONFIG_HID_STEAM=y
 CONFIG_DYNAMIC_STUNE_BOOST=y
@@ -6091,3 +6090,15 @@ CONFIG_MSM_THERMAL_SIMPLE=y
 CONFIG_LITTLE_CPU_MASK=15
 CONFIG_BIG_CPU_MASK=112
 CONFIG_PRIME_CPU_MASK=128
+
+CONFIG_CPUSETS_ASSIST=y
+CONFIG_CPUSET_AUDIO_APP="0-3,5-6"
+CONFIG_CPUSET_BG="0-1"
+CONFIG_CPUSET_CAMERA="0-3,6-7"
+CONFIG_CPUSET_FG="0-3,5-6"
+CONFIG_CPUSET_RESTRICTED="0-3"
+CONFIG_CPUSET_SYSTEM_BG="0-3"
+CONFIG_CPUSET_TOP_APP="0-7"
+
+CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=3879
+CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=500
